Closed Bug 453914 Opened 16 years ago Closed 16 years ago

Assigning to document.title fails for SVGDocument

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jorendorff, Assigned: jorendorff)

Details

Attachments

(1 file)

Steps to reproduce:
1.  Go to http://www.w3schools.com/svg/rect1.svg
2.  Paste javascript:try{document.title='ok';alert(document.title);}catch(exc){alert(exc);} into the location bar and hit Enter.

Expected: An alert with "ok"; after all 
Observed: An alert with "TypeError: Setting a property that has only a getter".

Simple fix coming.  (This was found by static analysis of the tree, for bug 453331.)
Attached patch v1Splinter Review
This also adds comments in a few other places where there's implicit significant order.
Assignee: nobody → jorendorff
Attachment #337169 - Flags: review?(jst)
Attachment #337169 - Flags: superreview+
Attachment #337169 - Flags: review?(jst)
Attachment #337169 - Flags: review+
Pushed http://hg.mozilla.org/mozilla-central/rev/d308d94367b2
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Component: DOM: Other → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: