Bug 453914 - Assigning to document.title fails for SVGDocument (r+sr=jst)